--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "start": "next dev",
-    "dev": "next dev",
     "build": "next build",
     "postbuild": "npm run sitemap && npm run rss",
     "sitemap": "cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-sitemap.mjs",
@@ -53,13 +52,14 @@
     "@svgr/webpack": "^6.1.2",
     "@types/react": "^17.0.14",
     "@types/tailwindcss": "^2.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
-    "eslint": "^7.29.0",
+    "eslint": "^8.0.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-mdx": "^2.0.5",
     "eslint-plugin-prettier": "^3.3.1",
     "file-loader": "^6.0.0",
     "globby": "11.0.3",
